# Project-Manager

./: .gitignore  README.md  app.py  crew_output.ipynb  pyproject.toml
src/content_marketing_project_manager/: crew.py  main.py  types.py
src/content_marketing_project_manager/config/: agents.yaml  tasks.yaml
