[project]
name = "content_marketing_project_manager"
version = "0.1.0"
description = "content_marketing_project_manager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "==3.12.2"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "matplotlib>=3.9.0",
    "reportlab>=4.2.0",
]

[project.scripts]
content_marketing_project_manager = "content_marketing_project_manager.main:run"
run_crew = "content_marketing_project_manager.main:run"
train = "content_marketing_project_manager.main:train"
replay = "content_marketing_project_manager.main:replay"
test = "content_marketing_project_manager.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
